--- a/README
+++ b/README
@@ -7,9 +7,10 @@ PyYAML - yaml library
   2) untarball ^^^
   3) 'python setup.py install' (may need to be root)
 
-bitarray - manipulate C-style bitfields
-  RHEL
-    1) sudo yum install python-bitarray
+  To use PyPy, these steps must be repeated, substituting:
+      'pypy setup.py install'
 
+Example Config:
+------------------
 
 
